# gpt-from-scratch

./: .gitignore  README.md  pyproject.toml
src/: attention.py  dataset.py  embedding_layer.py  gpt2.py  main.py  model.py  model_trainer.py  tokenizer.py
tests/: test_attention.py  test_dataset.py  test_embedding_layer.py  test_model.py  test_model_trainer.py  test_tokenizer.py
