[project]
name = "gpt-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lang Cheng", email = "langcheng@microsoft.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
gpt-from-scratch = "main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
